--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,29 +15,25 @@ import '@fontsource-variable/montserrat'
 		<title>Online Helpers</title>
 	</head>
 	<Layout>
-		<body>
-			<a href="/header">About Us</a>
-			<h2>Online Helpers</h2>
-			<h3>Work for groundbreaking, innovative companies from the comfort and safety of your own home
-</h3>
-		</body>
+		<main>
+			<section>
+				<div>
+					<h1 class='text-6xl mt-28 font-bold'>Online Helpers</h1>
+					<p class="text-3xl mt-5 max-w-3xl">Work for groundbreaking, innovative companies from the comfort and safety of your own home</p>
+				</div>
+			</section>
+		</main>
 	</Layout>
 </html>
 
 <style>
-    	h2 {
-		font-family: 'Poppins';
-		font-size: 4.5rem;
-	}
-		h3 {
-		font-family: 'Ubuntu';
-		font-size: 2.5rem;
-	}
-
-	a {
-		font-family: 'Poppins';
-		font-size: 1rem;
-		text-decoration: none;
-		color: black;
-	}
+  h1 {
+	font-family: 'Ubuntu';
+	color: #FBBF24;
+  }
+  p {
+	font-family: 'Poppins';
+	color: #1F2937;
+  }
+  
 </style>
