--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,10 +10,14 @@ import Header from "../components/header.astro"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="max-w-6xl mx-auto">
     <Header />
     <slot />
 </body>
 </html>
 
-
+<style>
+    body {
+        background-color: #FEF9C7;
+    }
+</style>
