--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from "../components/header.astro"
+import Header from "../components/Header.astro"
 ---
 
 
@@ -10,7 +10,8 @@ import Header from "../components/header.astro"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="max-w-6xl mx-auto">
+<body class="max-w-6xl mx-auto ">
+    <div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_800px_at_100%_200px,#f9d423,transparent)]"></div></div>
     <Header />
     <slot />
 </body>
@@ -18,6 +19,6 @@ import Header from "../components/header.astro"
 
 <style>
     body {
-        background-color: #FEF9C7;
+        background-color: #ffffff;
     }
 </style>
