--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -2,14 +2,15 @@
 
 const { title } = Astro.props;
 import '@fontsource/poppins'
+import '@fontsource-variable/onest';
 ---
 
 <section>
-    <button type="button" class="text-black hover:text-black border border-yellow-300 hover:bg-yellow-300 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-yellow-300 dark:text-yellow-300 dark:hover:text-white dark:hover:bg-yellow-400 dark:focus:ring-yellow-900 ">{title}</button>
+    <button type="button" class="text-black hover:text-black border border-yellow-300 hover:bg-yellow-300 focus:ring-4 focus:outline-none focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2 dark:border-yellow-300 dark:text-yellow-300 dark:hover:text-white dark:hover:bg-yellow-400 dark:focus:ring-yellow-900 hover:animate-scale">{title}</button>
 </section>
 <style>
     button {
-        font-family: 'Poppins';
+        font-family: 'Onest Variable';
         cursor: pointer;
     }
 </style>
