--- a/src/components/Mapamundi.astro
+++ b/src/components/Mapamundi.astro
@@ -34,7 +34,8 @@
       // Called on every animation frame.
       // `state` will be an empty object, return updated params.
       state.phi = phi
-      phi += 0.01
+      phi += 0.001
+      return state
     },
   })
 </script>
