--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro"
+import '@fontsource-variable/onest'
 ---
 
 
@@ -8,10 +9,11 @@ import Header from "../components/Header.astro"
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online Helpers</title>
 </head>
-<body class="max-w-6xl mx-auto ">
-    <div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"><div class="absolute bottom-0 left-0 right-0 top-0 bg-[radial-gradient(circle_800px_at_100%_200px,#f9d423,transparent)]"></div></div>
+<body class="max-w-7xl m-auto ">
+        <div class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_200%_at_50%_0%,#f6e201,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]"></div>
+
     <Header />
     <slot />
 </body>
@@ -19,6 +21,6 @@ import Header from "../components/Header.astro"
 
 <style>
     body {
-        background-color: #ffffff;
+        font-family: 'Onest Variable';
     }
 </style>
