--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,10 +13,7 @@ import ArrowDown from "./ArrowDown.astro";
 <header class="header">
   <div class="header__container">
     <nav class="header__nav flex justify-between m-auto">
-      <section class="flex gap-8 items-center m-4">
-        <img src="../../public/OH.jpg" alt="" object-fit="cover" class="w-15 h-15 rounded-full"/>
-      </section>
-      <section class="flex gap-8 p-4 m-4 mr-20 mb-2">
+      <section class="flex gap-8 p-4 m-4 mb-2">
         <div class="flex">
           <AnchorLink text='Home' secondText="Social" thirdText="Gallery"/>
         </div>
@@ -26,6 +23,9 @@ import ArrowDown from "./ArrowDown.astro";
         <div class="flex">
           <AnchorLink text='About Us' secondText="Benefits" thirdText="Privacy"/>
         </div>
+      </section>
+      <section class="flex gap-8 items-center m-4 p-4 mr-30">
+            <img src="../../public/OH.jpg" alt="" object-fit="cover" class="w-15 rounded-full"/>    
       </section>
     </nav>
   </div>
