--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,7 +12,6 @@ import '@fontsource-variable/onest'
     <title>Online Helpers</title>
 </head>
 <body class="max-w-7xl m-auto ">
-        <div class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_200%_at_50%_0%,#f6e201,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]"></div>
 
     <Header />
     <slot />
@@ -22,5 +21,6 @@ import '@fontsource-variable/onest'
 <style>
     body {
         font-family: 'Onest Variable';
+        overflow-x: hidden;
     }
 </style>
