--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Candidates from "../components/Candidates.astro";
 import Mainsection from "../components/Mainsection.astro";
 import Offer from "../components/Offer.astro";
 import Layout from "../layouts/Layout.astro";
@@ -14,5 +15,6 @@ import Layout from "../layouts/Layout.astro";
 	<Layout>
 		<Mainsection />
 		<Offer />
+		<Candidates />
 	</Layout>
 </html>
