--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -1,21 +1,42 @@
 
 ---
-const { href } = Astro.props;
+const { href, content } = Astro.props;
 import '@fontsource/poppins'
+import '@fontsource-variable/onest';
 ---
 
-<a
-    target="_blank"
-    href={href}
-    role="link"
-    class="inline-flex bg-gray-100 text-gray-800 border-gray-300 items-center justify-center gap-2 px-3 py-2 space-x-2 text-base transition dark:text-white dark:bg-gray-800 border dark:border-gray-600 focus-visible:ring-yellow-500/80 text-md hover:bg-gray-800 hover:border-gray-900 group max-w-fit rounded-xl hover:text-white focus:outline-none focus-visible:outline-none focus-visible:ring focus-visible:ring-white focus-visible:ring-offset-2 active:bg-black"
->
-    <slot />
-</a>
+<button><a href={href}>{content}</a></button>
+
 
 <style>
+
     a {
-        font-family: 'Poppins';
-        font-weight: 400;
-        cursor: pointer;
+        text-decoration: none;
+        color: black;
+        font-family: 'Onest Variable';
+        font-size: inherit;
+        line-height: inherit;
     }
+button {
+  background: #fbca1f;
+  font-family: inherit;
+  padding: 0.6em 1.3em;
+  font-weight: 900;
+  font-size: 18px;
+  border: 3px solid black;
+  border-radius: 0.4em;
+  box-shadow: 0.1em 0.1em;
+  cursor: pointer;
+}
+
+button:hover {
+  transform: translate(-0.05em, -0.05em);
+  box-shadow: 0.15em 0.15em;
+}
+
+button:active {
+  transform: translate(0.05em, 0.05em);
+  box-shadow: 0.05em 0.05em;
+}
+
+</style>
