--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@ import ArrowDown from "./ArrowDown.astro";
         </div>
       </section>
       <section class="flex gap-8 items-center m-4 p-4 mr-30">
-            <img src="../../public/OH.jpg" alt="" object-fit="cover" class="w-15 rounded-full"/>    
+            <img src="/OH.jpg" alt="" object-fit="cover" class="w-15 rounded-full"/>    
       </section>
     </nav>
   </div>
