--- a/src/components/Mainsection.astro
+++ b/src/components/Mainsection.astro
@@ -25,7 +25,7 @@ import { Image } from 'astro:assets';
 		</section>
 	</section>
 	<section class="mt-20 relative z-10">
-		<img src="../../public/remote-work.png" alt="" class="mb-20 animate-zoom-i hover:scale-105 transition-transform duration-300"/>
+		<img src="/remote-work.png" alt="" class="mb-20 animate-zoom-i hover:scale-105 transition-transform duration-300"/>
 	</section>
 </main>	
 
