Changing the description for benefits section

--- a/src/components/Offer.astro
+++ b/src/components/Offer.astro
@@ -6,7 +6,7 @@ import '@fontsource-variable/onest';
 <section class="flex flex-col justify-center m-4 p-4">
     <div class="flex justify-center flex-col items-center">
       <h1 class="text-4xl">What We Offer</h1>
-      <p class="p-4 text-xl max-w-2xl text-center">Join us and get the best of remote work. We provide reliable payments, long-term parterships, and the flexibility to work from the comfort of your home.</p>
+      <p class="p-4 text-xl max-w-2xl text-center">Join us and get the best perks of remote work</p>
     </div>
     <div class="flex gap-8 justify-center mt-10 flex-wrap">
         <OfferCard upText="Starting Rate" downText="$3/hour" svg="../../public/income.svg"/> 
