--- a/src/components/Offer.astro
+++ b/src/components/Offer.astro
@@ -9,10 +9,10 @@ import '@fontsource-variable/onest';
       <p class="p-4 text-xl max-w-2xl text-center">Join us and get the best perks of remote work</p>
     </div>
     <div class="flex gap-8 justify-center mt-10 flex-wrap">
-        <OfferCard upText="Starting Rate" downText="$3/hour" svg="../../public/income.svg"/> 
-        <OfferCard upText="Work From" downText="Home" svg="../../public/home.svg"/>  
-        <OfferCard upText="Get Paid" downText="Reliably" svg="../../public/withdraw.svg"/>  
-        <OfferCard upText="Long Term" downText="Contract" svg="../../public/contract.svg"/>  
+        <OfferCard upText="Starting Rate" downText="$3/hour" svg="/income.svg"/> 
+        <OfferCard upText="Work From" downText="Home" svg="/home.svg"/>  
+        <OfferCard upText="Get Paid" downText="Reliably" svg="/withdraw.svg"/>  
+        <OfferCard upText="Long Term" downText="Contract" svg="/contract.svg"/>  
     </div>
 </section>
 
