--- a/src/components/AnchorLink.astro
+++ b/src/components/AnchorLink.astro
@@ -1,10 +1,10 @@
 ---
-const {secondText, thirdText, text} = Astro.props;
+const {secondText, thirdText, text, fourText} = Astro.props;
 import '@fontsource/poppins'
 ---
 <div class="menu">
   <div class="item">
-    <a href="#" class="link">
+    <a href="#" class="link" class="">
       <span>{text}</span>
       <svg viewBox="0 0 360 360" xml:space="preserve">
         <g id="SVGRepo_iconCarrier">
@@ -22,6 +22,11 @@ import '@fontsource/poppins'
       <div class="submenu-item">
         <a href="#" class="submenu-link">{thirdText}</a>
       </div>
+      {fourText ?  
+     <div class="submenu-item">
+       <a href="#" class="submenu-link">{fourText}</a>
+     </div>  : null
+      }
     </div>
   </div>
 </div>
