--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Candidates from "../components/Candidates.astro";
 import Mainsection from "../components/Mainsection.astro";
 import Offer from "../components/Offer.astro";
+import LookingFor from "../components/LookingFor.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 <html lang="en">
@@ -15,6 +16,7 @@ import Layout from "../layouts/Layout.astro";
 	<Layout>
 		<Mainsection />
 		<Offer />
+		<LookingFor />
 		<Candidates />
 	</Layout>
 </html>
