Adding responsive design to the header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,8 +10,8 @@ import AnchorLink from "./AnchorLink.astro";
 import ArrowDown from "./ArrowDown.astro";
 ---
 
-<header class="header">
-  <div class="header__container flex m-4 p-4 justify-between">
+<header class="header ">
+  <div class="header__container hidden xl:flex m-4 p-4 justify-between">
     <div>
       <img src="/OH.jpg" alt="" object-fit="cover" class="w-25 rounded-full"/>    
     </div>
