--- a/src/components/LookingFor.astro
+++ b/src/components/LookingFor.astro
@@ -12,7 +12,7 @@
                 <p>Can commit to working full-time <b>(minimum of 6hrs/day, 5x/week, include 1 day on the weekend)</p>
             </section>
         </section>
-        <section>
+        <section class="m-4 p-4 flex justify-center items-center">
             <img src="/positions.png" alt="" width="400">
         </section>
     </section>
