--- a/src/components/Mainsection.astro
+++ b/src/components/Mainsection.astro
@@ -11,12 +11,12 @@ import { Image } from 'astro:assets';
 ---
 
 
-<main class="flex m-4 p-4 animate-fade-in-up">
-	<section class="flex flex-col w-6xl">
-		<section class="mt-20 z-10">
-			<h2 class="text-5xl font-bold max-w-xl">Work from home Anywhere. Your Dream Job Awaits</h2>
+<main class="p-4 animate-fade-in-up m-auto flex justify-center items-center text-left mb-20 flex-wrap">
+	<section class="flex flex-col items-center sm:items-start justify-center sm:justify-left">
+		<section class="mt-20 z-10 flex justify-center sm:justify-left sm:text-left sm:max-w-xl m-4 p-4">
+			<h2 class="sm:text-5xl font-bold text-4xl">Work from home Anywhere. Your Dream Job Awaits</h2>
 		</section>
-		<section class="flex flex-col mt-30 max-w-2xl">
+		<section class="m-4 p-4 flex flex-col mt-30 sm:mt-20 max-w-xl top-90 relative sm:top-0 text-left sm:text-left justify-center">
 			 <p class="text-2xl max-w-3xl">Work for groundbreaking, innovative companies <br> from the comfort and safety of your own home with Online Helpers</p>
 			<section class="mt-10 flex gap-4">
 				<LinkButton href="/apply" content="Apply now"></LinkButton>
@@ -24,8 +24,8 @@ import { Image } from 'astro:assets';
 			</section>
 		</section>
 	</section>
-	<section class="mt-20 relative z-10">
-		<img src="/remote-work.png" alt="" class="mb-20 animate-zoom-i hover:scale-105 transition-transform duration-300"/>
+	<section class="mt-10 relative z-10 bottom-75 sm:bottom-0">
+		<img src="/remote-work.png" alt="" class="mb-20 animate-zoom-i hover:scale-105 transition-transform duration-300" width="500"/>
 	</section>
 </main>	
 
