--- a/src/components/Mainsection.astro
+++ b/src/components/Mainsection.astro
@@ -16,15 +16,14 @@ import { Image } from 'astro:assets';
 		<section class="mt-20 z-10 flex justify-center sm:justify-left sm:text-left sm:max-w-xl m-4 p-4">
 			<h2 class="sm:text-5xl font-bold text-4xl">Work from home Anywhere. Your Dream Job Awaits</h2>
 		</section>
-		<section class="m-4 p-4 flex flex-col mt-30 sm:mt-20 max-w-xl top-90 relative sm:top-0 text-left sm:text-left justify-center">
-			 <p class="text-2xl max-w-3xl">Work for groundbreaking, innovative companies <br> from the comfort and safety of your own home with Online Helpers</p>
-			<section class="mt-10 flex gap-4">
+		<section class="m-4 p-4 flex flex-col mt-30 sm:mt-20 max-w-xl relative text-left sm:text-left justify-center">
+			 <p class="sm:text-2xl max-w-3xl text-xl">Work for groundbreaking and innovative companies, while enjoying the comfort, flexibility, and safety of working from your own home with <b>Online Helpers.</b></p>
+			<section class="mt-10 flex gap-4 flex-wrap">
 				<LinkButton href="/apply" content="Apply now"></LinkButton>
-				<LinkButton href="/apply" content="About Us"></LinkButton>
 			</section>
 		</section>
 	</section>
-	<section class="mt-10 relative z-10 bottom-75 sm:bottom-0">
+	<section class="mt-10 relative z-10 hidden sm:flex">
 		<img src="/remote-work.png" alt="" class="mb-20 animate-zoom-i hover:scale-105 transition-transform duration-300" width="500"/>
 	</section>
 </main>	
