--- a/src/components/Candidates.astro
+++ b/src/components/Candidates.astro
@@ -4,7 +4,7 @@ import Skills from "./Skills.astro";
 ---
 
 
-<section class="flex flex-col justify-center m-4 p-4 mt-30">
+<section class="flex flex-col justify-center m-4 p-4 mt-30" id="jobs">
     <div class="flex justify-center flex-col items-center">
         <h1 class="text-4xl text-center">Our Current Jobs</h1>
         <p class="p-4 text-xl max-w-2xl text-center">We offer remote positions with competitive pay and long-term parterships. Find the perfect role and start your career from home.</p>
