--- a/src/components/Offer.astro
+++ b/src/components/Offer.astro
@@ -3,7 +3,7 @@ import OfferCard from './OfferCard.astro';
 import '@fontsource-variable/onest';
 ---
 
-<section class="flex flex-col justify-center m-4 p-4">
+<section class="flex flex-col justify-center m-4 p-4" id="offer">
     <div class="flex justify-center flex-col items-center">
       <h1 class="text-4xl">What We Offer</h1>
       <p class="p-4 text-xl max-w-2xl text-center">Join us and get the best perks of remote work</p>
