--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -3,7 +3,7 @@ import LinkButton from "./LinkButton.astro";
 const {textUp, textMiddle, rate} = Astro.props;
 ---
 
-<article class="pointer card animate-fade-in-up card flex flex-col justify-center items-center gap-4 p-4 m-4 z-1 hover:scale-105 transition-transform duration-300">
+<article id="#jobs" class="pointer card animate-fade-in-up card flex flex-col justify-center items-center gap-4 p-4 m-4 z-1 hover:scale-105 transition-transform duration-300">
   <section class="card__hero">
     <header class="card__hero-header">
       <span>{rate}</span>
