--- a/src/components/LookingFor.astro
+++ b/src/components/LookingFor.astro
@@ -1,4 +1,6 @@
 ---
+import LinkButton from "./LinkButton.astro";
+
 
 ---
 
@@ -6,11 +8,14 @@
     <section class="m-auto flex justify-center items-center text-left mt-40 mb-40 flex-wrap">
         <section class="flex flex-col justify-center m-4 p-4 max-w-xl">
             <h1 class="text-4xl">We are looking for...</h1>
-            <section class="text-xl flex flex-col mt-10 gap-4">
+            <section class="text-xl sm:text-2xl flex flex-col mt-10 gap-4">
                 <p>Great English proficient</p>
                 <p>Available to work <b> US hours</p>
                 <p>Can commit to working full-time <b>(minimum of 6hrs/day, 5x/week, include 1 day on the weekend)</p>
             </section>
+            <div class="mt-10">
+                <LinkButton href="#jobs" content="Apply now" class="w-40"></LinkButton>
+            </div>
         </section>
         <section class="m-4 p-4 flex justify-center items-center">
             <img src="/positions.png" alt="" width="400">
