--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Header from "../components/Header.astro"
 import '@fontsource-variable/onest'
+import { ClientRouter } from "astro:transitions";
+
 ---
 
 
@@ -9,6 +11,7 @@ import '@fontsource-variable/onest'
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <ClientRouter />
     <title>Online Helpers</title>
 </head>
 <body class="max-w-7xl m-auto ">
