Adding the carrusel images and the footer

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,8 +30,8 @@ import Hamburger from "./Hamburger.astro";
               text='Home' 
               secondText="Social" 
               thirdText="Gallery" 
-              idSecond="#social" 
-              idThird="gallery"/>
+              idSecond="#footer" 
+              idThird="#gallery"/>
         </div>
         <div class="flex">
           <AnchorLink 
