--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,8 @@ import Mainsection from "../components/Mainsection.astro";
 import Offer from "../components/Offer.astro";
 import LookingFor from "../components/LookingFor.astro";
 import Layout from "../layouts/Layout.astro";
+import Footer from "../components/Footer.astro";
+import Gallery from "../components/Gallery.astro";
 ---
 <html lang="en">
 	<head>
@@ -17,6 +19,9 @@ import Layout from "../layouts/Layout.astro";
 		<Mainsection />
 		<Offer />
 		<LookingFor />
+		<hr>
 		<Candidates />
+		<Gallery />
+		<Footer/> 
 	</Layout>
 </html>
