--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,38 @@
 ---
+ import '@fontsource-variable/onest'
 ---
 
+<footer class="mt-50" id="footer">
+    <hr>
+    <section class="flex gap-4 p-10 justify-center text-center sm:text-left items-center flex-wrap sm:justify-between ">
+        <div class="p-4">
+            <h2 class="m-4">@All rights reserved for <b></b>Online Helpers 2025</h2>
+            <a href="" class="font-bold m-4 mt-4">Privacy Policy</a>
+        </div>
+        <section class="flex flex-col justify-center">
+            <div>
+                <p class="text-center">Our Social Media</p>
+            </div>
+            <div class="flex items-center gap-4 mt-4">
+                <a href="https://www.facebook.com/p/Online-helpers-100075706824580/"><img src="/meta.svg" alt="" width="30px"></a>
+                <a href="https://www.tiktok.com/@online.helpers"><img src="/tiktok.svg" alt="" width="30px"></a>
+                <a href="https://www.instagram.com/online.helpers/"> <img src="/instagram.svg" alt="" width="30px"></a>  
+            </div>
+        </section>
+    </section>
+</footer>
+
+<style>
+    img {
+        cursor: pointer;
+    }
+    h2 {
+        font-family: 'Onest Variable', sans-serif;
+    }
+    p {
+        font-family: 'Onest Variable', sans-serif;
+    }
+    hr {
+        height: 2px;
+    }
+</style>
