--- a/src/components/Mainsection.astro
+++ b/src/components/Mainsection.astro
@@ -7,6 +7,7 @@ import '@fontsource-variable/montserrat'
 import '@fontsource-variable/onest';
 import LinkButton from "../components/LinkButton.astro";
 import { Image } from 'astro:assets';
+import Mapamundi from './Mapamundi.astro';
 
 ---
 
