--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -1,115 +1,21 @@
 ---
-import 'photoswipe/style.css';
-import '@fontsource-variable/onest'
-const IMAGES = ['/setup-01.jpg','/setup-02.jpg', '/setup-03.jpg']
-
+import GalleryItem from './GalleryItem.astro'
+const firstTestimonie = 'Working remotely with Online Helpers has given me the chance to improve my skills every day. I feel more confident in my career and I can grow while working with new people in the world.'
+const secondTestimonie = 'Working with Online Helpers has allowed me to take better care of myself. I can manage my time, focus on exercise and mental health, and still grow professionally at the same time'
+const thirdTestimonie = 'Thanks to Online Helpers I’ve been able to practice my English on a daily basis. It’s not only a job, it’s also a space where I keep improving and learning something new all the time.'
+const fourtTestimonie = 'Thanks to Online Helpers I feel less stressed and more balanced. Remote work allows me to take care of my health, exercise, and focus on my well-being while still being productive'
 ---
 
-<section class="mt-40">
-    <section class="flex flex-col justify-center items-center text-4xl p-10">
+<section>
+     <section class="flex flex-col justify-center items-center text-4xl p-10 text-center mt-30">
         <h1 class="font-bold p-4">Be part of the best team</h1>
         <p class="p-4 text-lg">Level up your skills, connect with amazing people, and enjoy every step of the journey with us.</p>
     </section>
-    <div class="pswp-gallery flex flex-wrap justify-center" id="gallery">
-        {
-            IMAGES.map(image => (
-                
-             <section class="stack p-10">
-                <div class="card">
-                  <div class="image">                    
-                    <img src={image} alt=""/>
-                  </div>
-                </div>
-            </section>
-
-            ))
-        }
-    </div>
+    <section class="flex justify-center flex-wrap">
+        <GalleryItem name="Juan Pablo" photo="null" text={firstTestimonie} photo="/test.jpg"/>
+        <GalleryItem name="Maria Alejandra" photo="null" text={secondTestimonie} photo="/test2.jpg"/>
+        <GalleryItem name="Diego Reyes" photo="null" text={thirdTestimonie} photo="/test3.jpg"/>
+        <GalleryItem name="Edier Santiago" photo="null" text={fourtTestimonie} photo="/test4.jpg"/>
+    </section>
+        
 </section>
-
-<script>
-    import PhotoSwipeLightbox from 'photoswipe/lightbox';
-    const lightbox = new PhotoSwipeLightbox({
-    gallery: '#gallery',
-    children: 'a',
-      pswpModule: () => import('photoswipe')
-    });
-    lightbox.init();
-</script>
-
-<style>
-    h1 {
-        font-family: 'Onest Variable';
-    }
-img {
-  display: block;
-  max-width: 100%;
-  height: 100%;
-}
-
-.stack {
-  width: 100%;
-  max-width: 400px;
-  transition: 0.25s ease;
-  &:hover {
-    transform: rotate(5deg);
-    .card:before {
-      transform: translatey(-2%) rotate(-4deg);
-    }
-    .card:after {
-      transform: translatey(2%) rotate(4deg);
-    }
-  }
-}
-
-.card {
-  aspect-ratio: 3 / 2;
-  border: 4px solid;
-  background-color: #fff;
-  position: relative;
-  transition: 0.15s ease;
-  cursor: pointer;
-  padding: 5% 5% 15% 5%;
-  &:before,
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 90%;
-    width: 100%;
-    border: 4px solid;
-    background-color: #fff;
-    transform-origin: center center;
-    z-index: -1;
-    transition: 0.15s ease;
-    top: 0;
-    left: 0;
-  }
-
-  &:before {
-    transform: translatey(-2%) rotate(-6deg);
-  }
-
-  &:after {
-    transform: translatey(2%) rotate(6deg);
-  }
-}
-.image {
-  width: 100%;
-  border: 4px solid;
-  background-color: #eee;
-  aspect-ratio: 1 / 1;
-  position: relative;
-}
-
-.browser-warning {
-  margin-bottom: 4rem;
-}
-
-@supports (aspect-ratio: 1 / 1) {
-  .browser-warning {
-    display: none;
-  }
-}
-
-</style>
