adding padding to the mobile version

--- a/src/components/Gallery.astro
+++ b/src/components/Gallery.astro
@@ -7,7 +7,7 @@ const fourtTestimonie = 'Thanks to Online Helpers I feel less stressed and more 
 ---
 
 <section>
-     <section class="flex flex-col justify-center items-center text-4xl p-10 text-center mt-30">
+     <section class="flex flex-col justify-center items-center text-4xl p-10 mt-30">
         <h1 class="font-bold p-4">Be part of the best team</h1>
         <p class="p-4 text-lg">Level up your skills, connect with amazing people, and enjoy every step of the journey with us.</p>
     </section>
