improving the header logo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import Hamburger from "./Hamburger.astro";
   <section>
     <div class="flex items-center justify-between">
       <div>
-        <img src="/OH.jpg" alt="" class="sm:w-30 rounded-full w-25 m-4 p-4"/>
+        <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-25 m-4 p-4"/>
       </div>
       <div class="xl:hidden absolute right-0 m-4 p-4">
         <Hamburger />
@@ -24,7 +24,7 @@ import Hamburger from "./Hamburger.astro";
   </section>
   <div class='header__container hidden xl:flex'>
     <nav class="header__nav flex">
-      <section class="flex gap-8 mb-10 z-10">
+      <section class="flex gap-8 z-10">
         <div class="flex">
           <AnchorLink 
               text='Home' 
