Adding the dropdown to mobile version

--- a/src/components/Mainsection.astro
+++ b/src/components/Mainsection.astro
@@ -12,12 +12,12 @@ import Mapamundi from './Mapamundi.astro';
 ---
 
 
-<main class="animate-fade-in-up m-auto flex justify-center items-center text-left mb-20 flex-wrap">
+<main class="animate-fade-in-up m-auto flex justify-center items-center text-left mb-20 flex-wrap mt-30 sm:mt-0">
 	<section class="flex flex-col items-center sm:items-start justify-center sm:justify-left">
 		<section class="mt-20 z-10 flex justify-center sm:justify-left sm:text-left sm:max-w-xl m-4 p-4">
 			<h2 class="sm:text-5xl font-bold text-4xl sm:mb-10">Work From Home anywhere, your dream Job awaits in Online Helpers</h2>
 		</section>
-		<section class="m-4 p-4 flex flex-col mt-30 sm:mt-20 max-w-xl relative text-left sm:text-left justify-center">
+		<section class="m-4 p-4 flex flex-col mt-30 sm:mt-20 max-w-xl relative text-left sm:text-left justify-center z-10">
 			 <p class="sm:text-2xl max-w-3xl text-xl">Work for groundbreaking and innovative companies, while enjoying the comfort, flexibility, and safety of working from your own home</p>
 			<section class="mt-10 flex gap-4 flex-wrap">
 				<LinkButton href="#jobs" content="Apply now"></LinkButton>
