--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,15 +11,15 @@ import ArrowDown from "./ArrowDown.astro";
 import Hamburger from "./Hamburger.astro";
 ---
 
-<header class="header flex justify-between items-center m-auto max-w-6xl">
+<header class="header flex justify-between items-center m-auto max-w-6xl z-20">
   <section>
     <div class="flex items-center justify-between">
-      <div>
-        <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-25 m-4 p-4"/>
-      </div>
-      <div class="xl:hidden absolute right-0 m-4 p-4">
+      <div class="sm:hidden absolute m-4 p-4 mt-35 z-20">
         <Hamburger />
       </div>   
+      <div>
+        <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-40 m-4 p-4 sm:relative sm:left-0 absolute right-0"/>
+      </div>
     </div>
   </section>
   <div class='header__container hidden xl:flex'>
@@ -39,9 +39,9 @@ import Hamburger from "./Hamburger.astro";
              secondText="Spanish Jobs" 
              thirdText="English Jobs" 
              fourText="Technician"
-             idSecond="/spanish"
-             idThird="/english"
-             idFour="/technician"
+             idSecond="#jobs"
+             idThird="#jobs"
+             idFour="#jobs"
              />
         </div>
         <div class="flex">
