Fixing the overflow

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,3 +25,9 @@ import Gallery from "../components/Gallery.astro";
 		<Footer/> 
 	</Layout>
 </html>
+
+<style>
+	body {
+		overflow-x: hidden;
+	}
+</style>
