--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,4 +30,7 @@ import Gallery from "../components/Gallery.astro";
 	body {
 		overflow-x: hidden;
 	}
+	html {
+		overflow-x: hidden;
+	}
 </style>
