--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,13 +12,13 @@ import Hamburger from "./Hamburger.astro";
 ---
 
 <header class="header flex justify-between items-center m-auto max-w-6xl z-20">
-  <section>
+  <section class="">
     <div class="flex items-center justify-between">
-      <div class="sm:hidden absolute m-4 p-4 mt-35 z-20">
+      <div class="sm:hidden m-4 p-4 mt-10 z-20">
         <Hamburger />
       </div>   
       <div>
-        <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-40 m-4 p-4 sm:relative sm:left-0 absolute right-0"/>
+        <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-50 sm:mt-0 -mt-11 m-4 p-4 sm:relative sm:left-0 absolute right-0"/>
       </div>
     </div>
   </section>
