--- a/src/components/Mainsection.astro
+++ b/src/components/Mainsection.astro
@@ -12,7 +12,7 @@ import Mapamundi from './Mapamundi.astro';
 ---
 
 
-<main class="animate-fade-in-up m-auto flex justify-center items-center text-left mb-20 flex-wrap mt-30 sm:mt-0">
+<main class="animate-fade-in-up m-auto flex justify-center items-center text-left mb-20 flex-wrap sm:mt-0">
 	<section class="flex flex-col items-center sm:items-start justify-center sm:justify-left">
 		<section class="mt-20 z-10 flex justify-center sm:justify-left sm:text-left sm:max-w-xl m-4 p-4">
 			<h2 class="sm:text-5xl font-bold text-4xl sm:mb-10">Work From Home anywhere, your dream Job awaits in Online Helpers</h2>
