--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -9,7 +9,7 @@ import '@fontsource/poppins'
     <span></span>
     <span></span>
   </div>
-  <nav class="popup-window w-70 mt-2 text-xl h-50">
+  <nav class="popup-window w-75 mt-2 text-xl h-50">
     <ul>
       <li>
         <button>
@@ -78,7 +78,7 @@ import '@fontsource/poppins'
   --nav-button-padding-y: 0.375em;
   --nav-button-border-radius: 0.375em;
   --nav-button-font-size: 12px;
-  --nav-button-hover-bg: #eeff00;
+  --nav-button-hover-bg: #fbca1f;
   --nav-button-hover-text-color: #000000;
   --nav-button-distance: 0.875em;
   --underline-border-width: 0.0625em;
