--- a/src/components/Candidates.astro
+++ b/src/components/Candidates.astro
@@ -10,9 +10,9 @@ import Skills from "./Skills.astro";
         <p class="p-4 text-xl max-w-2xl text-center">We offer remote positions with competitive pay and long-term parterships. Find the perfect role and start your career from home.</p>
     </div>
     <div class="flex gap-4 justify-center mt-10 flex-wrap">
-        <Skills textUp="Online Installation" textMiddle="Technician" rate="4USD/h"/> 
-        <Skills textUp="Online Helper" textMiddle="English" rate="3USD/h"/> 
-        <Skills textUp="Online Helper" textMiddle="Spanish" rate="3USD/h"/> 
+        <Skills textUp="Online Installation" textMiddle="Technician" rate="4USD/h" href="/technician"/> 
+        <Skills textUp="Online Helper" textMiddle="English" rate="3USD/h" href="/english"/> 
+        <Skills textUp="Online Helper" textMiddle="Spanish" rate="3USD/h" href="/spanish"/> 
     </div>
 </section>
 
