--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,8 @@
             <div class="flex items-center gap-4 mt-4">
                 <a href="https://www.facebook.com/p/Online-helpers-100075706824580/"><img src="/meta.svg" alt="" width="30px"></a>
                 <a href="https://www.tiktok.com/@online.helpers"><img src="/tiktok.svg" alt="" width="30px"></a>
-                <a href="https://www.instagram.com/online.helpers/"> <img src="/instagram.svg" alt="" width="30px"></a>  
+                <a href="https://www.instagram.com/online.helpers/"> <img src="/instagram.svg" alt="" width="30px"></a>
+                <a href="https://www.linkedin.com/company/online-helpers-remote-global-support/"> <img src="/linkedin.svg" alt="" width="30px"></a>  
             </div>
         </section>
     </section>
