--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -13,22 +13,22 @@ import '@fontsource/poppins'
     <ul>
       <li>
         <button>
-          <a class="text-sm m-2">About Online Helpers</a>
+          <a class="text-sm m-2" href="#about">About Online Helpers</a>
         </button>
       </li>
       <li>
         <button>
-          <a class="text-sm m-2">Careers</a>
+          <a class="text-sm m-2" href="#jobs">Careers</a>
         </button>
       </li>
       <li>
         <button>
-          <a class="text-sm m-2">Benefits</a>
+          <a class="text-sm m-2" href="#offer">Benefits</a>
         </button>
       </li>
       <li>
         <button>
-          <a class="text-sm m-2">Social Media</a>
+          <a class="text-sm m-2" href="#footer">Social Media</a>
         </button>
       </li>
     </ul>
