--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,8 @@ import Hamburger from "./Hamburger.astro";
         <Hamburger />
       </div>   
       <div>
-        <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-40 sm:mt-0 -mt-10  sm:m-4 sm:p-4 sm:relative sm:left-0 absolute right-0"/>
+        <a href="/"> <img src="/OH.png" alt="" class="sm:w-50 rounded-full w-40 sm:mt-0 -mt-10  sm:m-4 sm:p-4 sm:relative sm:left-0 absolute right-0 cursor-pointer"/></a>
+        
       </div>
     </div>
   </section>
@@ -29,7 +30,7 @@ import Hamburger from "./Hamburger.astro";
           <AnchorLink 
               text='Home' 
               secondText="Social" 
-              thirdText="Gallery" 
+              thirdText="Testimonies" 
               idSecond="#footer" 
               idThird="#gallery"/>
         </div>
