--- a/src/components/GalleryItem.astro
+++ b/src/components/GalleryItem.astro
@@ -5,7 +5,7 @@ const { name, photo, text } = Astro.props
 
 ---
 
-<section class="h-70 mt-10 sm:mt-0">             
+<section class="h-70 mt-10 sm:mt-0  hover:scale-105 transition-transform duration-300">             
   <div class="w-60 m-4 bg-gradient-to-l from-slate-300 to-slate-100 text-slate-600 border border-slate-300 grid grid-col-2 justify-center p-4 gap-4 rounded-lg shadow-md">
     <div class="col-span-2 text-lg font-bold capitalize rounded-md flex gap-4">
       <img src={photo} alt="" width="30" class="rounded-full">
