First snapshot ready / finished all the sections

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -2,33 +2,33 @@
 import '@fontsource/poppins'
 ---
 
-<label class="popup w-xl">
+<label class="popup">
   <input type="checkbox">
   <div class="burger" tabindex="0">
     <span></span>
     <span></span>
     <span></span>
   </div>
-  <nav class="popup-window w-75 mt-2 text-xl h-50">
+  <nav class="popup-window mt-2 text-xl h-50">
     <ul>
       <li>
         <button>
-          <a class="text-sm m-2" href="#about">About Online Helpers</a>
+          <a class="text-sm m-2" href="/">Welcome to OH Team</a>
         </button>
       </li>
       <li>
         <button>
-          <a class="text-sm m-2" href="#jobs">Careers</a>
+          <a class="text-sm m-2" href="/#jobs">Careers</a>
         </button>
       </li>
       <li>
         <button>
-          <a class="text-sm m-2" href="#offer">Benefits</a>
+          <a class="text-sm m-2" href="/#offer">Benefits</a>
         </button>
       </li>
       <li>
         <button>
-          <a class="text-sm m-2" href="#footer">Social Media</a>
+          <a class="text-sm m-2" href="/#footer">Social Media</a>
         </button>
       </li>
     </ul>
