--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,8 +31,8 @@ import Hamburger from "./Hamburger.astro";
               text='Home' 
               secondText="Social" 
               thirdText="Testimonies" 
-              idSecond="#footer" 
-              idThird="#gallery"/>
+              idSecond="/#footer" 
+              idThird="/#gallery"/>
         </div>
         <div class="flex">
           <AnchorLink 
@@ -40,9 +40,9 @@ import Hamburger from "./Hamburger.astro";
              secondText="Spanish Jobs" 
              thirdText="English Jobs" 
              fourText="Technician"
-             idSecond="#jobs"
-             idThird="#jobs"
-             idFour="#jobs"
+             idSecond="/#jobs"
+             idThird="/#jobs"
+             idFour="/#jobs"
              />
         </div>
         <div class="flex">
@@ -50,7 +50,7 @@ import Hamburger from "./Hamburger.astro";
              text='About Us' 
              secondText="Benefits" 
              thirdText="Privacy"
-             idSecond="#offer"
+             idSecond="/#offer"
              idThird="/privacy"
            />
         </div>
