--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro"
 import '@fontsource-variable/onest'
 import { ClientRouter } from "astro:transitions";
+import Footer from "../components/Footer.astro";
 
 ---
 
@@ -18,6 +19,7 @@ import { ClientRouter } from "astro:transitions";
 
     <Header />
     <slot />
+    <Footer/>
 </body>
 </html>
 
